Se implementó la HU-003

--- a/inventary_pro/src/main/resources/messages.properties
+++ b/inventary_pro/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 product.added=Producto agregado exitosamente
+product.updated=Producto actualizado exitosamente
+product.not.updated=Producto no actualizado exitosamente
